# modern-llm-v1

./: .gitignore  LICENSE  README.md  TODO.md  modern-llm-v1.sln
configs/: modernllm-300m.json
dashboard/: index.html
data/: bpe_smoke_log.jsonl
gui/Monitor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ModernLLM.Monitor.csproj
gui/Monitor/Converters/: InverseBoolConverter.cs
gui/Monitor/Models/: CheckpointInfo.cs  GpuStats.cs  MetricSample.cs
gui/Monitor/Services/: CheckpointBrowser.cs  JsonlMetricReader.cs  NvidiaSmiPoller.cs  SamplerService.cs
gui/Monitor/ViewModels/: MainViewModel.cs  SamplerViewModel.cs
gui/Monitor/Views/: SamplerWindow.xaml  SamplerWindow.xaml.cs
llm/: CMakeLists.txt
llm/apps/: infer_modern_gpt.cu  train_bigram.cu  train_minigpt.cu  train_modern_gpt.cu
llm/src/core/: cast.cu  cast.h  cuda_check.h  device.h  dtype.h  gemm.cu  gemm.h  random.cu  random.h  scratch.cu  scratch.h  tensor.cu  tensor.h
llm/src/data/: dataloader.cpp  dataloader.h  token_meta.cpp  token_meta.h
llm/src/model/: activations.cu  activations.h  attention.cu  attention.h  embedding.cu  embedding.h  flash_attn.cu  flash_attn.h  layernorm.cu  layernorm.h  linear.cu  linear.h  modern_gpt.cu  modern_gpt.h  rmsnorm.cu  rmsnorm.h  rope.cu  rope.h
llm/src/tokenizer/: char_tokenizer.cpp  char_tokenizer.h
llm/src/train/: adamw.cu  adamw.h  checkpoint.cu  checkpoint.h  grad_utils.cu  grad_utils.h  loss.cu  loss.h
llm/tests/: bench_flash_attn.cu  test_activations.cu  test_adamw.cu  test_attention.cu  test_bf16.cu  test_bf16_kernels.cu  test_embedding.cu  test_flash_attn.cu  test_gemm.cu  test_layernorm.cu  test_linear.cu  test_loss.cu  test_mha.cu  test_rmsnorm.cu  test_rope.cu  test_tensor.cu  test_util.h
scripts/: build_and_test.bat  build_gui.bat  dashboard_server.py  download_shakespeare.py  prepare_tokens.py  sample.py
todo/: 09_sources.md  tier3_plan.md
todo/done/: 01_architecture.md  02_training_efficiency.md  03_data.md
todo/open/: 04_rl_training.md  05_monitoring_gui.md  06_evaluation.md  07_publish.md  08_finetuning.md
